--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <meta name="description" content="Clarity & Beauty – Join the conversation on drawing, creativity and visual understanding, and have a look at my pictures of this great spectacle called life!" />
-    <title>Your Name - Portfolio</title>
+    <title>Rajat - Art & Writing</title>
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
